# sphinx-inline-svg

./: .coverage  .gitignore  README.md  README_ja.md  pyproject.toml  tox.ini
docs/: dev_notes.md
src/sphinx_inline_svg/: __init__.py  inline_svg.py
tests/: conftest.py  test_builder.py  test_errors.py  test_inline_class.py  test_link.py  test_rest.py  test_settings.py  test_smoke.py  test_version.py
tests/proj_myst/source/: conf.py  index.md
tests/proj_myst/source/svg_inline/: index.md  link_target.md
tests/proj_rest/source/: conf.py  index.rst
tests/proj_rest/source/svg_inline/: index.rst  link_target.rst
