[project]
name = "sphinx-inline-svg"
version = "0.1.1"
description = "Sphinx extension to make svg images inline"
authors = [{ name = "satamame", email = "satamame@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
keywords = ["sphinx", "extension", "inline", "svg"]
dependencies = [
    "sphinx>=7.4.0",
    "lxml>=5.3.0",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/satamame/sphinx-inline-svg"
Repository = "https://github.com/satamame/sphinx-inline-svg.git"
Issues = "https://github.com/satamame/sphinx-inline-svg/issues"
# Documentation = "https://github.com/satamame/sphinx-inline-svg/blob/main/README.md"
# Changelog = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_inline_svg"]
