[project]
name = "sphinx-inline-svg"
version = "0.2.0"
description = "Sphinx extension to make svg images inline"
authors = [{ name = "satamame", email = "satamame@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
keywords = ["sphinx", "extension", "inline", "svg"]
dependencies = [
    "sphinx>=7.4.0",
    "lxml>=5.3.0",
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/satamame/sphinx-inline-svg"
Repository = "https://github.com/satamame/sphinx-inline-svg.git"
Issues = "https://github.com/satamame/sphinx-inline-svg/issues"
# Documentation = "https://github.com/satamame/sphinx-inline-svg/blob/main/README.md"
Changelog = "https://github.com/satamame/sphinx-inline-svg/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.8",
    "pytest>=8.3.3",
    "tomli>=2.0.1; python_version < '3.11'",
    "myst-parser>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_inline_svg"]

[tool.coverage.run]
omit = ["tests/*"]
